# technical-task

./: .gitignore  README.md  main.py  pyproject.toml
core/: graph.py  logs.py  parser.py  strings.py
tests/: conftest.py  test_task.py
