[tool.poetry]
name = "technical_task"
version = "0.1.0"
description = ""
authors = ["Dispoison <maliarenko.vitaliy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
